# autodiff-rs

./: Cargo.toml  README.md  build.rs
benches/: cart_pole.rs  tape_eval.rs
crates/ad/: Cargo.toml
crates/ad/src/: function.rs  lib.rs  sparsity.rs
crates/autodiff/: Cargo.toml
crates/autodiff/src/: deriv.rs  drivers.rs  expression.rs  expression_matrix.rs  function.rs  grad.rs  interpreter.rs  jacobian.rs  lib.rs  lower_expression.rs  node.rs  op.rs  tape.rs  var.rs
crates/backend/: Cargo.toml
crates/backend/src/: backend.rs  interpreter.rs  lib.rs
crates/ipopt/: Cargo.toml
crates/ipopt-sys/: Cargo.toml  build.rs  regen-bindings.sh  wrapper.h
crates/ipopt-sys/src/: bindings.rs  lib.rs
crates/ipopt/src/: bridge.rs  lib.rs  nlp.rs
crates/ir/: Cargo.toml
crates/ir/src/: bits.rs  display.rs  function.rs  instruction.rs  lib.rs  op.rs  ty.rs  value.rs
crates/ir_autodiff/: Cargo.toml
crates/ir_autodiff/src/: jvp.rs  lib.rs  vjp.rs  vmap.rs
crates/ir_optimize/: Cargo.toml
crates/ir_optimize/src/: constant_propagate.rs  copy_propagate.rs  gvn.rs  lib.rs
crates/optimization/: Cargo.toml
crates/optimization/src/: problem.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs
crates/tape/: Cargo.toml
crates/tape/src/: backend.rs  drivers.rs  function.rs  interpreter.rs  jit.rs  jvp.rs  lib.rs  op.rs  tape.rs
src/: context.rs  grad.rs  interpreter.rs  main.rs  node.rs  op.rs  tape.rs
tests/: gradient.rs  jacobian.rs  linear.rs  nonlinear_problem_test.rs  rosenbrock.rs  test.rs
