[package]
name = "autodiff-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/tape",
]

[dependencies]
index_vec = "0.1"
nearly = "0.4.0"
tape = { path = "crates/tape" }
cc = "1"
cranelift = "0.107"
cranelift-jit = "0.107"
cranelift-module = "0.107"
cranelift-native = "0.107"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tape_eval"
harness = false
