[package]
name = "autodiff-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/autodiff",
    "crates/ipopt-sys",
    "crates/ipopt",
    "crates/solver",
]

[dependencies]
index_vec = "0.1"
nearly = "0.4.0"
autodiff = { path = "crates/autodiff" }
ipopt-sys = { path = "crates/ipopt-sys" }
ipopt = { path = "crates/ipopt" }
solver = { path = "crates/solver" }
cc = "1"
cranelift = "0.107"
cranelift-jit = "0.107"
cranelift-module = "0.107"
cranelift-native = "0.107"

[build-dependencies]
pkg-config = "0.3"